added delete function, refactored loops into functions

--- a/toDoList.html
+++ b/toDoList.html
@@ -13,6 +13,7 @@
 	<ul>
 		<li>"new" - Add a To-do</li>
 		<li>"list" - View all To-dos</li>
+		<li>"delete" - Remove a specific task from list</li>
 		<li>"quit - Quit app"</li>
 	</ul>
 </body>
